fix:z-index for emoji.mart

--- a/student-support-frontend/StudentSupport/src/app/feature-modules/layout/my-profile/my-profile.component.css
+++ b/student-support-frontend/StudentSupport/src/app/feature-modules/layout/my-profile/my-profile.component.css
@@ -515,7 +515,8 @@
         .emoji-mart{
             position: absolute;
             left: 100%;
-            bottom: 0%;         
+            bottom: 0%;  
+            z-index: 1000;       
         }
 
 
